# FitLetter

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
.claude/skills/cover-letter-generator/: SKILL.md
backend/: Dockerfile.prod  main.py  pyproject.toml
backend/prompts/: cover_letter.md
backend/routes/: generate.py
backend/services/: claude_agent.py  cv_parser.py  latex_compiler.py
backend/tests/: test_api.py  test_claude_agent.py  test_cv_parser.py  test_latex_compiler.py
docs/plans/: 2026-02-19-cover-letter-maker-design.md
frontend/: Dockerfile.prod  README.md
frontend/app/: globals.css  layout.tsx  page.tsx
